Dotted borders render w/ artifacts and sometimes as solid lines https://bugs.webkit.org/show_bug.cgi?id=3964

Patch by Pravin D <pravind@samsung.com> on 2013-07-30
Reviewed by Elliott Sprehn.

Source/WebCore:

While drawing the dotted border, the common borders are drawn by the cells sharing them. The dotted borders
become(tend) solid when the starting and the end points of the border drawn by the two cells don't match. This
fixes the same.

Test: fast/table/border-collapsing/dotted-collapsed-border.html

* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::alignLeftRightBorderPaintRect):
(WebCore::RenderTableCell::alignTopBottomBorderPaintRect):
 Helper function to decide if border's start point requires any adjustment.

(WebCore::RenderTableCell::paintCollapsedBorders):
Added logic to handle dotted borders so that they do not become solid.

* rendering/RenderTableCell.h:
 Helper function declarations.

LayoutTests:

* fast/table/border-collapsing/dotted-collapsed-border-expected.txt: Added.
* fast/table/border-collapsing/dotted-collapsed-border.html: Added.
* platform/qt/fast/table/border-collapsing/dotted-collapsed-border-expected.png: Added.

Canonical link: https://commits.webkit.org/137271@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153510 268f45cc-cd09-0410-ab3c-d52691b4dbfc