Source/WebCore/rendering/RenderTableCell.h
@@ -121,6 +121,8 @@ public:
 
     virtual void paint(PaintInfo&, const LayoutPoint&);
 
+    bool alignLeftRightBorderPaintRect(int& leftXOffset, int& rightXOffset);
+    bool alignTopBottomBorderPaintRect(int& topYOffset, int& bottomYOffset);
     void paintCollapsedBorders(PaintInfo&, const LayoutPoint&);
     void paintBackgroundsBehindCell(PaintInfo&, const LayoutPoint&, RenderObject* backgroundObject);
 
